[package]
name = "squashfs"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
# byteorder = "1.4.3"
binread = "2.2.0"
xz2 = "0.1.7"
flate2 = "1.0.24"
tracing = "0.1.40"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }

[[example]]
name = "inode_table_reader"
